--- a/src/main/resources/templates/user/contacts.html
+++ b/src/main/resources/templates/user/contacts.html
@@ -161,7 +161,7 @@
                         <button th:onclick="deleteContact([[${c.id}]])">
                           <i class="fa-solid w-6 h-6 fa-trash"></i>
                         </button>
-                        <a href=""> <i class="fa-solid w-6 h-6 fa-pen"></i></a>
+                        <a data-th-href="@{'/user/contacts/view/'+*{id}}"> <i class="fa-solid w-6 h-6 fa-pen"></i></a>
                         <button
                           
                           th:onclick="loadContactdata([[${c.id}]])"
