--- a/src/main/resources/templates/user/add_contact.html
+++ b/src/main/resources/templates/user/add_contact.html
@@ -23,7 +23,7 @@
             <div
               class="card block p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700"
             >
-            <div data-th-replace="message::messagebox"></div>
+            <div data-th-replace="~{message::messagebox}"></div>
               <h1 class="text-2xl font-semibold">Add New Contact</h1>
               <p class="text-gray-500">
                 This contact will be stored on cloud, you can direct email this
